--- a/build.yaml
+++ b/build.yaml
@@ -1,6 +1,5 @@
 include:
   - board: seeeduino_xiao_ble
-    shield: totem_left
+    shield: totem_left settings_reset
   - board: seeeduino_xiao_ble
-    shield: totem_right
-# there is no settingsreset (needed) for the XIAO
+    shield: totem_right settings_reset
