--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,7 @@
 include:
   - board: seeeduino_xiao_ble
-    shield: totem_left settings_reset
+    shield: totem_left 
   - board: seeeduino_xiao_ble
-    shield: totem_right settings_reset
+    shield: totem_right
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
